# Godofchildprojekts

./: BibleStudy.cpp  Financetracker.py  README.md  SavingMoney.cpp  StockMate.cpp  bankaccount.cpp  betygsystem.cpp  bilar.cpp  calculation_area_and_permiters.py  contactinformation.cpp  count_vowels.py  decrypt_encryptor.cpp  gpa.cpp  gusseing_number.py  kassa.py  matte.cpp  savings_tracker.cpp  table.py
CV/: index.html  style.css
List/: CMakeLists.txt  List_sv_SE.ts  main.cpp  mainwindow.cpp  mainwindow.ui
